run also tests with travis cli

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
-osx_image: xcode9.0
+osx_image: xcode9.2
 language: objective-c
 
 xcode_project: MKCacheStorage.xcodeproj
+xcode_scheme: MKCacheStorageTests
 
 # whitelist
 branches:
